force-app/main/default/objects/WT_Participant__c/WT_Participant__c.object-meta.xml
<CustomObject>
    <description>Custom object built to contain the Wear tester information. Formerly called, &quot;Tester&quot;.</description>
    <label>Participant</label>
    <nameField>
        <label>Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>