force-app/main/default/objects/WT_Participant__c/fields/Agreement_Form__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Form__c</fullName>
    <description>Has the tester signed the Vasque Agreement Form.</description>
    <inlineHelpText>Has the tester signed the Vasque Agreement Form.</inlineHelpText>
    <label>Agreement Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>