force-app/main/default/objects/WT_Participant__c/fields/Alternate_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Address_Line_1__c</fullName>
    <description>Line 1 of alternate address</description>
    <inlineHelpText>Line 1 of alternate address</inlineHelpText>
    <label>Alternate Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>