force-app/main/default/objects/WT_Participant__c/fields/Alternate_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Address_Line_2__c</fullName>
    <description>Line 2 of the alternate address.</description>
    <inlineHelpText>Line 2 of the alternate address.</inlineHelpText>
    <label>Alternate Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>