force-app/main/default/objects/WT_Participant__c/fields/Alternate_City__c.field-meta.xml
<CustomField>
    <fullName>Alternate_City__c</fullName>
    <description>City of the alternate address.</description>
    <inlineHelpText>City of the alternate address.</inlineHelpText>
    <label>Alternate City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>