force-app/main/default/objects/WT_Participant__c/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <description>Alternate email address of the tester.</description>
    <inlineHelpText>Alternate email address of the tester.</inlineHelpText>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>