force-app/main/default/objects/WT_Participant__c/fields/Alternate_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Zip_Code__c</fullName>
    <description>Zip Code of the alternate address.</description>
    <inlineHelpText>Zip Code of the alternate address.</inlineHelpText>
    <label>Alternate Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>