force-app/main/default/objects/WT_Participant__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Picklist field to allow Vasque to categorize their testers</description>
    <inlineHelpText>Categorize the Vasque testers.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backpacking</fullName>
            </value>
            <value>
                <fullName>Hiking</fullName>
            </value>
            <value>
                <fullName>Performance Hiking</fullName>
            </value>
            <value>
                <fullName>Trail Running</fullName>
            </value>
            <value>
                <fullName>Winter Hiking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>