force-app/main/default/objects/WT_Participant__c/fields/Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Cell_Phone__c</fullName>
    <description>Cell phone of the tester.</description>
    <inlineHelpText>Cell phone of the tester.</inlineHelpText>
    <label>Cell Phone</label>
    <type>Phone</type>
</CustomField>