force-app/main/default/objects/WT_Participant__c/fields/Chest_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Chest_Measurement__c</fullName>
    <description>The measurement of the tester&apos;s chest.</description>
    <inlineHelpText>The measurement of the tester&apos;s chest.</inlineHelpText>
    <label>Chest Measurement</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>