force-app/main/default/objects/WT_Participant__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>The date of birth of the tester.</description>
    <inlineHelpText>The date of birth of the tester.</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>