force-app/main/default/objects/WT_Participant__c/fields/Days_a_week_you_wear__c.field-meta.xml
<CustomField>
    <fullName>Days_a_week_you_wear__c</fullName>
    <description>The number of days a week the tester wears the footwear.</description>
    <inlineHelpText>The number of days a week the tester wears the footwear.</inlineHelpText>
    <label>Days a week you wear</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 5 days</fullName>
            </value>
            <value>
                <fullName>More than 5 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>