force-app/main/default/objects/WT_Participant__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <description>The company or organization the tester works for.</description>
    <inlineHelpText>The company or organization the tester works for.</inlineHelpText>
    <label>Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>