force-app/main/default/objects/WT_Participant__c/fields/Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Date__c</fullName>
    <description>The date the person became a tester with Red Wing Shoes.</description>
    <inlineHelpText>The date the person became a tester with Red Wing Shoes.</inlineHelpText>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>