force-app/main/default/objects/WT_Participant__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First name of the tester</description>
    <inlineHelpText>First name of the tester</inlineHelpText>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>