force-app/main/default/objects/WT_Participant__c/fields/Garment_Height_Name__c.field-meta.xml
<CustomField>
    <fullName>Garment_Height_Name__c</fullName>
    <description>The height of the garment.</description>
    <inlineHelpText>The height of the garment.</inlineHelpText>
    <label>Garment Height Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Extra Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>