force-app/main/default/objects/WT_Participant__c/fields/Height_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Height_Measurement__c</fullName>
    <description>The height measurement of the tester.</description>
    <inlineHelpText>The height measurement of the tester.</inlineHelpText>
    <label>Height Measurement</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>