force-app/main/default/objects/WT_Participant__c/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <description>Home phone number of the tester.</description>
    <inlineHelpText>Home phone number of the tester.</inlineHelpText>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>