force-app/main/default/objects/WT_Participant__c/fields/Hours_a_day_you_wear__c.field-meta.xml
<CustomField>
    <fullName>Hours_a_day_you_wear__c</fullName>
    <description>Information about how long the tester wears the footwear.</description>
    <inlineHelpText>Information about how long the tester wears the footwear.</inlineHelpText>
    <label>Hours a day you wear</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 8 hrs.</fullName>
            </value>
            <value>
                <fullName>8-12 hrs</fullName>
            </value>
            <value>
                <fullName>12 +hrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>