force-app/main/default/objects/WT_Participant__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>The industry the tester works in.</description>
    <inlineHelpText>The industry the tester works in.</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Asphalt paving</fullName>
            </value>
            <value>
                <fullName>Extreme cold/freezer</fullName>
            </value>
            <value>
                <fullName>Food processing/packaging</fullName>
            </value>
            <value>
                <fullName>General trades</fullName>
            </value>
            <value>
                <fullName>Hospitality/restaurant</fullName>
            </value>
            <value>
                <fullName>Law enforcement/ security/paramedics</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Mining/foundry/steel mill</fullName>
            </value>
            <value>
                <fullName>Oil &amp; gas</fullName>
            </value>
            <value>
                <fullName>Railroad</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Welding, machinist</fullName>
            </value>
            <value>
                <fullName>Wet environment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>