force-app/main/default/objects/WT_Participant__c/fields/Inseam_Length__c.field-meta.xml
<CustomField>
    <fullName>Inseam_Length__c</fullName>
    <description>The length of the tester&apos;s inseam.</description>
    <inlineHelpText>The length of the tester&apos;s inseam.</inlineHelpText>
    <label>Inseam Length</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>