force-app/main/default/objects/WT_Participant__c/fields/Insulated_Footwear__c.field-meta.xml
<CustomField>
    <fullName>Insulated_Footwear__c</fullName>
    <description>Requirements about the tester&apos;s footwear insulation requirements.</description>
    <inlineHelpText>Requirements about the tester&apos;s footwear insulation requirements.</inlineHelpText>
    <label>Insulated Footwear</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, all the time</fullName>
            </value>
            <value>
                <fullName>Occasionally</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>