force-app/main/default/objects/WT_Participant__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last name of the tester.</description>
    <inlineHelpText>Last name of the tester.</inlineHelpText>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>