force-app/main/default/objects/WT_Participant__c/fields/Measured_Date__c.field-meta.xml
<CustomField>
    <fullName>Measured_Date__c</fullName>
    <description>The date the tester was measured.</description>
    <inlineHelpText>The date the tester was measured.</inlineHelpText>
    <label>Measured Date</label>
    <type>Date</type>
</CustomField>