force-app/main/default/objects/WT_Participant__c/fields/Measurement_Comments__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Comments__c</fullName>
    <description>Text area to capture measurement comments.</description>
    <inlineHelpText>Comments about the measurements.</inlineHelpText>
    <label>Measurement Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>