force-app/main/default/objects/WT_Participant__c/fields/Metatarsal_Protection__c.field-meta.xml
<CustomField>
    <fullName>Metatarsal_Protection__c</fullName>
    <description>Information about the tester&apos;s metatarsal protection requirements.</description>
    <inlineHelpText>Information about the tester&apos;s metatarsal protection requirements.</inlineHelpText>
    <label>Metatarsal Protection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, is required - internal metatarsal</fullName>
            </value>
            <value>
                <fullName>Yes, is required - external metatarsal</fullName>
            </value>
            <value>
                <fullName>Yes, is required - both internal and external</fullName>
            </value>
            <value>
                <fullName>No, not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>