force-app/main/default/objects/WT_Participant__c/fields/Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Middle_Initial__c</fullName>
    <description>Middle initial of the tester.</description>
    <inlineHelpText>Middle initial of the tester.</inlineHelpText>
    <label>Middle Initial</label>
    <length>1</length>
    <type>Text</type>
</CustomField>