force-app/main/default/objects/WT_Participant__c/fields/Occupation_Alternate__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Alternate__c</fullName>
    <description>An alternate occupation the tester works in.</description>
    <inlineHelpText>An alternate occupation the tester works in.</inlineHelpText>
    <label>Occupation - Alternate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>