force-app/main/default/objects/WT_Participant__c/fields/Occupation_Primary__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Primary__c</fullName>
    <description>The occupation the tester works in.</description>
    <inlineHelpText>The occupation the tester works in.</inlineHelpText>
    <label>Occupation - Primary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>