force-app/main/default/objects/WT_Participant__c/fields/On_average_how_long_does_footwear_last__c.field-meta.xml
<CustomField>
    <fullName>On_average_how_long_does_footwear_last__c</fullName>
    <description>Information about how long the footwear lasts for the tester.</description>
    <inlineHelpText>Information about how long the footwear lasts for the tester.</inlineHelpText>
    <label>On average how long does footwear last</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5 months or less</fullName>
            </value>
            <value>
                <fullName>6-12 months</fullName>
            </value>
            <value>
                <fullName>13-18 months</fullName>
            </value>
            <value>
                <fullName>18+months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>