force-app/main/default/objects/WT_Participant__c/fields/Participant_Class__c.field-meta.xml
<CustomField>
    <fullName>Participant_Class__c</fullName>
    <description>A field to segment testers/participants.</description>
    <inlineHelpText>A field to segment testers/participants.</inlineHelpText>
    <label>Participant Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>Athletes</fullName>
            </value>
            <value>
                <fullName>Internal Employees</fullName>
            </value>
            <value>
                <fullName>Mount Washington Observatory</fullName>
            </value>
            <value>
                <fullName>Sales Reps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>