force-app/main/default/objects/WT_Participant__c/fields/Participant_Comments__c.field-meta.xml
<CustomField>
    <fullName>Participant_Comments__c</fullName>
    <description>A long text area field for comments about the tester.
Renamed from Tester Comments</description>
    <inlineHelpText>Comments about the participant.</inlineHelpText>
    <label>Participant Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>