force-app/main/default/objects/WT_Participant__c/fields/Participant_Status__c.field-meta.xml
<CustomField>
    <fullName>Participant_Status__c</fullName>
    <description>The status of the tester. A tester may only be active in any one test/product at a time.
Renamed from Tester Status</description>
    <inlineHelpText>The current status of the participant. A participant may only be added to a test if their status is active.</inlineHelpText>
    <label>Participant Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Available for Testing</fullName>
            </value>
            <value>
                <fullName>Currently Testing</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>