force-app/main/default/objects/WT_Participant__c/fields/Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone__c</fullName>
    <description>The preferred phone number of the tester.</description>
    <inlineHelpText>The preferred phone number of the tester.</inlineHelpText>
    <label>Preferred Phone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Cell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>