force-app/main/default/objects/WT_Participant__c/fields/Primary_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_Line_1__c</fullName>
    <description>Line 1 of the primary address.</description>
    <inlineHelpText>Line 1 of the primary address.</inlineHelpText>
    <label>Primary Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>