force-app/main/default/objects/WT_Participant__c/fields/Primary_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_Line_3__c</fullName>
    <label>Primary Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>