force-app/main/default/objects/WT_Participant__c/fields/Primary_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_City__c</fullName>
    <description>City of the primary address.</description>
    <inlineHelpText>City of the primary address.</inlineHelpText>
    <label>Primary City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>