force-app/main/default/objects/WT_Participant__c/fields/Primary_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_Country__c</fullName>
    <description>Country of the primary address.</description>
    <inlineHelpText>Country of the primary address.</inlineHelpText>
    <label>Primary Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>