force-app/main/default/objects/WT_Participant__c/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <description>Email address of the tester.</description>
    <inlineHelpText>Email address of the tester.</inlineHelpText>
    <label>Primary Email</label>
    <type>Email</type>
</CustomField>